# bmx2ogg

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  bmx2ogg.sln
bmx2ogg/: audio.cpp  audio.h  bms_resource.cpp  bms_resource.h  bmx2ogg.filters  bmx2ogg.vcxproj  bmx2ogg.vcxproj.filters  bmx2wav_buffer.cpp  bmx2wav_buffer.h  bmx2wav_common.cpp  bmx2wav_common.h  bmx2wav_main.cpp  bmx2wav_ogg.cpp  bmx2wav_ogg.h  bmx2wav_wav.cpp  bmx2wav_wav.h  bmx2wav_wav_maker.cpp  bmx2wav_wav_maker.h  bmx2wav_wav_maker_ogg.cpp  exception.cpp  exception.h
include/iconv/: iconv.h
lib/: libiconv.lib  libsndfile-1.lib
libogg/: ReadMe.txt  libogg.vcxproj  libogg.vcxproj.filters
libsndfile/src/: libsndfile-1.exp  libsndfile-1.lib
libvorbis/: ReadMe.txt  libvorbis.vcxproj  libvorbis.vcxproj.filters
